--- a/jsp_mini_project/.settings/org.eclipse.core.resources.prefs
+++ b/jsp_mini_project/.settings/org.eclipse.core.resources.prefs
@@ -1,5 +1,6 @@
 eclipse.preferences.version=1
 encoding//src/main/webapp/project/CrossFitJoin.jsp=UTF-8
 encoding//src/main/webapp/project/CrossFitJoinIdCheck.jsp=UTF-8
+encoding//src/main/webapp/project/CrossFitPromotion.jsp=UTF-8
 encoding//src/main/webapp/project/dbconn.jsp=UTF-8
 encoding/<project>=UTF-8
